--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </td>
 </tr></table><br>
 		</header>
-		<article bgcolor=FFFFFF>
+		<article>
 			<table width= 80% bgcolor=FFFFFF max-width=500 min-width=300 cellpadding=20 border=0 size=5>
 				<tr>
 					<td>
