--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Copyright (c) Nimere Levap | http://webdesigner.ga./ -->
 <html lang="ru" charset="utf-8">
 	<head>
-		<title>~Webdesigner.ga~ Вебдизайнер</title>
+		<title>~Webdesigner.ga~ Вебдизайн в сети</title>
 		<meta name="description" conent="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
 		<meta name="keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css.">
 		<meta name="author" content="http://webdesigner.ga">
@@ -17,7 +17,7 @@
 					p{ text-indent: 25px;}
 		</style>
 	</head>
-	<body bgcolor=#CACACA alink=2700FF link=000062 vlink=00FF3E background=bgg.png topmargin=0 leftmargin=0 rightmargin=0 bottommargin=0 marginwidth=0 marginheight=0 max-width=1300  min-width=320>
+	<body bgcolor=#CACACA alink=2700FF link=000062 vlink=3A4751 background=bgg.png topmargin=0 leftmargin=0 rightmargin=0 bottommargin=0 marginwidth=0 marginheight=0 max-width=1300  min-width=320>
 		<center>
 		<header>
 			<table cellpadding=20 cellspacing=0 border=0  bgcolor=000000 width=100%>
