--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<header>
 			<table cellpadding=20 cellspacing=0 border=0  bgcolor=000000 width=100%>
 				<tr>
-					<td align=left><a href="webdesigner.ga"><img src="logo.png" alt="Webdesigner.ga~Логотип" width=420 height=130 border=0 ></a>
+					<td align=left><a href="http://webdesigner.ga"><img src="logo.png" alt="Webdesigner.ga~Логотип" width=420 height=130 border=0 ></a>
 					</td>
 					<td align=right>
 					</td>
