--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ru" charset="utf-8">
 	<head>
 		<title>~Webdesigner.ga~ Вебдизайн в сети</title>
-		<meta name="description" conent="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
+		<meta name="description" content="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
 		<meta name="keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css.">
 		<meta name="author" content="http://webdesigner.ga">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
