--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
 		<meta name="keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css.">
 		<meta name="author" content="http://webdesigner.ga">
+		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 		<style type=text/css>
