--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<p size=5>Вебдизайн существует давно, чуть ли не с сотворения <a href="http://yomayo.ga">интернет сети</a>... Но в те далёкие времена ещё не существовало понятия вебдизайнер, и дизайны сайтов отличались <a href="http://yaromin.ga">простотой и незамысловатостью</a>, основными элементами были контент и ссылки, впрочем ничего не изменилось и сейчас, за исключением того, что внешнему виду сайта сейчас уделяется куда больше внимания и времени. Индивидуальный неповторимый хоть уже и не на 100% дизайн сайта, это и есть работа вебдизайнера.</p><br><p>Оформление контента на сайте может быть как классическим так и эксперементальным, как минималистическим, так и с максимальным использованием всевозможных спецэффектов CSS и атрибутов HTML, анимациями и интерактивными элементами JS.</p><hr><h2>Cтили вебдизайна</h2><p> Вообще такого понятия никогда небыло, но в последнее время начало появляться, поэтому я решил выделить основные:</p>
 					<ul>
 						<li>
-							<h3>Минимализм</h3><p>Основным является текстовый контент, изображениям уделяется мало внимания, и используются они для создания акцентов в дизайне. Примером может послужить RSS канал.</p>
+							<h3>Минимализм</h3><p>Основным является текстовый контент, изображениям уделяется мало внимания, и используются они для создания акцентов в дизайне. Примером может послужить RRS канал.</p>
 						</li>
 						<li>
 							<h3>Классицизм</h3><p>Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов.</p>
