--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
-	#zero{margin:0px; padding:0px; background-image: url(bg.png); width:100%; display:block;}
+	#zero{margin:0px; padding:0px; background-image: url(bg.png); background-color: #000000;width:100%; display:block;}
 	.logomenu{background-image:url(bg.png); width:200px; height:100%; padding:5px;}
 	span{display: block;}
 	.logomenu ul li a{ padding: 10px 0px 0px 0px;font-size:20px; display:block; color:#FFFE00; }
