--- a/tipografika.html
+++ b/tipografika.html
@@ -4,7 +4,7 @@
 		<title>Webdesigner.ga - Вебдизайн в сети</title>
 		<meta name="description" content="Webdesigner.ga ~  Типографика — это разнообразное начертание шрифтов, используещееся при оформлении текстовой информации в таких изданиях как газеты, журналы..">
 		<meta name="keywords" content="webdesigner, типографика, вебдизайн, html,css.">
-		<meta name="author" content="http://webdesigner.ga">
+		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
