--- a/webdesigne.html
+++ b/webdesigne.html
@@ -4,7 +4,7 @@
 		<title>Webdesigner.ga - Вебдизайн в сети</title>
 		<meta name="description" content="Webdesigner.ga ~  Вебдизайн — это визуальное оформление контента интернет страницы размещённой в сети интернет средствами языков HTML  и  CSS.">
 		<meta name="keywords" content="Webdesigner, вебдизайн, вебдизайнер, html,css.">
-		<meta name="author" content="http://webdesigner.ga">
+		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
