--- a/kontent.html
+++ b/kontent.html
@@ -4,7 +4,7 @@
 		<title>Webdesigner.ga - Вебдизайн в сети</title>
 		<meta name="description" content="Webdesigner.ga ~  Контентом — называется информационное содержание сайта, которыми могут быть как текстовые и графические записи...">
 		<meta name="keywords" content="webdesigner, контент, вебдизайнер, html,css.">
-		<meta name="author" content="http://webdesigner.ga">
+		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
