--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 <nav class="logomenu" >
 <a href="https://webdesigner.ga"><img src="logotype.png" alt="Webdesigner.ga"></a>
 <center>
-	<ul><li class="link"><a href="https://webdesigner.ga/index.html">Главная</a></li>
-	<li><a href="https://webdesigner.ga/webdesigne.html">Вебдизайн</a></li>
-	<li><a href="https://webdesigner.ga/kontent.html">Контент</a></li>
-	<li><a href="https://webdesigner.ga/tipografika.html">Типографика</a></li></ul>
+	<ul><li class="link"><a href="https://webdesigner.ga/index.html" rel="index">Главная</a></li>
+	<li><a href="https://webdesigner.ga/webdesigne.html" rel="index">Вебдизайн</a></li>
+	<li><a href="https://webdesigner.ga/kontent.html" rel="index">Контент</a></li>
+	<li><a href="https://webdesigner.ga/tipografika.html" rel="index">Типографика</a></li></ul>
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
 <h1>О вебдизайне, вебдизайнах, вебдизайнерах.</h1>
-<p>Вебдизайн существует давно, чуть ли не с сотворения интернет сети... Но в те далёкие времена ещё не существовало понятия вебдизайнер, и дизайны сайтов отличались простотой и незамысловатостью, основными элементами были контент и ссылки, впрочем ничего не изменилось и сейчас, за исключением того, что внешнему виду сайта сейчас уделяется куда больше внимания и времени. Индивидуальный неповторимый хоть уже и не на 100% дизайн сайта, это и есть работа вебдизайнера.</p>
+<p>Вебдизайн существует давно, чуть ли не с сотворения <a href="https://dic.academic.ru/dic.nsf/es/23309/%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%BD%D0%B5%D1%82" rel="nofollow"> интернет сети</a>. Но в те далёкие времена ещё не существовало понятия вебдизайнер, и дизайны сайтов отличались простотой и незамысловатостью, основными элементами были контент и ссылки, впрочем ничего не изменилось и сейчас, за исключением того, что внешнему виду сайта сейчас уделяется куда больше внимания и времени. Индивидуальный неповторимый хоть уже и не на 100% дизайн сайта, это и есть работа вебдизайнера.</p>
 
 
 <p>Оформление контента на сайте может быть как классическим так и эксперементальным, как минималистическим, так и с максимальным использованием всевозможных спецэффектов CSS и атрибутов HTML, анимациями и интерактивными элементами JS.</p>
