--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	center {margin:0px;  padding:0 200px 0 0}
 	#dura_na_hui_ussr{color:#FFFFFF; max-width: 600px; padding: 20px;position:relative; margin: -490px 0  0 220px; font-size:20px;} 
 	.nebo{padding:25px; color:#ffffff;}
-	.link{color:#FFFFFF}
+	.link{color:#FFFFFF} a{color:#FF6E9C;}
+	
 </style>
 </head>
 <body id="zero">
