--- a/tipografika.html
+++ b/tipografika.html
@@ -31,7 +31,8 @@
 <article id="dura_na_hui_ussr">
 <h1>Типографика.</h1>
 <p>Типографика — это разнообразное начертание шрифтов, используещееся при оформлении текстовой информации в таких изданиях как газеты, журналы, книги брошюры и т.п., в том числе и в веб среде.</p><br>
-	<p>К примеру контент делится как минимум на две части, на заглавие (заголовок) и информационную часть, содержащую основной контент, насыщенный подробностями, где тема заглавия более широко раскрыта.</p>
+	<p>К примеру контент делится как минимум на две части, на заглавие (заголовок) и информационную часть, содержащую основной контент, насыщенный подробностями, где тема заглавия более широко раскрыта.</p><br>
+	<p> Шрифты делятся в общем на три вида: С засечками, Рубленые без засечек, и Декоративные (к примеру стилизированные под буквы "восточных" или азиатских стран). Проще говоря первые две категории относятся к классическим, которые и используются в большинстве случаев, при этом они очень похожи друг на друга, особенно при небольшом размере шрифта.</p>
 	
 </article>
 <footer class="nebo">
