--- a/kontent.html
+++ b/kontent.html
@@ -32,7 +32,7 @@
 <h1>Контент.</h1>
 <p>Контентом — называется информационное содержание сайта, которыми могут быть как текстовые и графические записи, так и медиа (видео и аудио).</p><br>
 	<p>Язык Html  позволяет разместить контент, а CSS  оформить уникальный внешний вид, который будет отличатся от заданного по умолчанию языком HTML. </p><br><p>Наиболее интересен уникальный контент, однако в связи с распостранением сети интернет по миру, уникального контента становится всё меньше и меньше. 
-	В результате чего, в интернете довольно распостранены сайты, которые скопировали контент с другого сайта, в этом случае установлены негластные правила хорошего тона, когда скопированный текст должен ссылатся на первоисточник.Данная система похожа на ту, что используется в курсовых и дипломных работах, которые в последнее время частенько пишутся на заказ другими.</p>
+	В результате чего, в интернете довольно распостранены сайты, которые скопировали контент с другого сайта, в этом случае установлены негласные правила хорошего тона, когда скопированный текст должен ссылатся на первоисточник.Данная система похожа на ту, что используется в курсовых и дипломных работах, которые в последнее время частенько пишутся на заказ другими.</p>
 	
 	
 </article>
