--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	span{display: block;}
 	.logomenu ul li a{ padding: 10px 0px 0px 0px;font-size:20px; display:block; color:#FFFE00; }
 	center {margin:0px;  padding:0 200px 0 0}
-	#dura_na_hui_ussr{color:#FFFFFF; max-width: 600px; padding: 20px;position:relative; margin: -470px 0  0 220px; font-size:20px;} 
+	#dura_na_hui_ussr{color:#FFFFFF; max-width: 600px; padding: 40px 20px 20px 20px;position:relative; margin: -470px 0  0 220px; font-size:20px;} 
 	.nebo{padding:25px; color:#ffffff;}
 	.link{color:#FFFFFF} a{color:#FF6E9C;}
 	
