--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
 	<head>
-		<title>Webdesigner.ga - Вебдизайн в сети</title>
-		<meta name="description" content="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
-		<meta name="keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css.">
+		<title>Webdesigner.ga - Вебдизайн в сети интернет</title>
+		<meta name="Description" content="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
+		<meta name="Keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css. сеть интернет, www, стили вебдизайна, стили веб дизайна, вебдизайн в сети интернет.">
 		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,23 +30,23 @@
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
-<h1>О вебдизайне, вебдизайнах, вебдизайнерах.</h1>
+<h1>О вебдизайне, вебдизайнах, вебдизайнерах в сети интернет.</h1>
 <p>Вебдизайн существует давно, чуть ли не с сотворения <a href="https://dic.academic.ru/dic.nsf/es/23309/%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%BD%D0%B5%D1%82" rel="nofollow" title="Почитать о сети интернет"> интернет сети</a>. Но в те далёкие времена ещё не существовало понятия вебдизайнер, и дизайны сайтов отличались простотой и незамысловатостью, основными элементами были контент и ссылки, впрочем ничего не изменилось и сейчас, за исключением того, что внешнему виду сайта сейчас уделяется куда больше внимания и времени. Индивидуальный неповторимый хоть уже и не на 100% дизайн сайта, это и есть работа вебдизайнера.</p>
 
 
-<p>Оформление контента на сайте может быть как классическим так и эксперементальным, как минималистическим, так и с максимальным использованием всевозможных спецэффектов CSS и атрибутов HTML, анимациями и интерактивными элементами JS.</p>
-<h2>Cтили вебдизайна</h2>
+<p>Оформление контента на сайте в сети интернет может быть как классическим так и эксперементальным, как минималистическим, так и с максимальным использованием всевозможных спецэффектов CSS, анимациями SVG и интерактивными элементами JS.</p>
+<h2>Cтили вебдизайна в сети интернет.</h2>
 <p>Вообще такого понятия никогда небыло, но в последнее время начало появляться, поэтому я решил выделить основные:
 
-<h3>Минимализм</h3>
+<h3>Минималистический дизайн.</h3>
 Основным является текстовый контент, изображениям уделяется мало внимания, и используются они для создания акцентов в дизайне. Примером может послужить RRS канал.
 
-<h3>Классицизм</h3>
+<h3>Классический дизайн.</h3>
 Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов.
 
-<h3>Арт</h3>
+<h3>Арт дизайн.</h3>
 Наиболее яркие и эмоциональные дизайны, дизайнеры эксперементируют и стараются добится эффекта "Вау!" Часто используются в рекламных компаниях.</p>
-<p> При всём при этом у этих "чемпионов великих" как и у меня скоро перестанет работать float,  а то видимо им лендинги некому на бустрапе "верстать"</p>
+<p>В этом направлении веб разработок креатив часто носит главенствующую позицию, частенько некоторые решения перетекают в тренд и не имеют уже того изначального эффекта.Поэтому дизайнер работает над новым решением, которое не так распостранено в массах.</p>
 </article>
 <footer class="nebo">
 	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://webdesigner.ga"> Yaromin.ga</a></p>
