--- a/webdesigne.html
+++ b/webdesigne.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
 	<head>
-		<title>Webdesigner.ga - Вебдизайн в сети</title>
-		<meta name="description" content="Webdesigner.ga ~  Вебдизайн — это визуальное оформление контента интернет страницы размещённой в сети интернет средствами языков HTML  и  CSS.">
-		<meta name="keywords" content="Webdesigner, вебдизайн, вебдизайнер, html,css.">
+		<title>Webdesigner.ga - Что такое вебдизайн?</title>
+		<meta name="Description" content="Webdesigner.ga ~  Вебдизайн — это визуальное оформление контента интернет страницы размещённой в сети интернет средствами языков HTML  и  CSS.">
+		<meta name="Keywords" content="Webdesigner, вебдизайн, вебдизайнер, html,css. что такое вебдизайн, оформление контента, о вебдизайне.">
 		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,7 +29,7 @@
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
-<h1>О вебдизайне.</h1>
+<h1>О вебдизайне, или что такое вебдизайн.</h1>
 <p>Вебдизайн — это визуальное оформление контента интернет страницы размещённой в сети интернет средствами языков HTML  и  CSS, который можно разделить на создание макета с помощью графических программ и вёрстку с помощью текстового редактора, хотя и не обязательно.</p><br>
 	<p>Язык Html   на протяжении многих лет подвергался модефикациям, в результате чего имеет несколько версий, на данный период времени актуальны Html4  и Html5 (последний вроде как ещё недоработан, но его уже многие используют). Тоже самое касается и CSS, последней версией которого является 3-я.</p>
 	
