--- a/kontent.html
+++ b/kontent.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
 	<head>
-		<title>Webdesigner.ga - Вебдизайн в сети</title>
-		<meta name="description" content="Webdesigner.ga ~  Контентом — называется информационное содержание сайта, которыми могут быть как текстовые и графические записи...">
-		<meta name="keywords" content="webdesigner, контент, вебдизайнер, html,css.">
+		<title>Webdesigner.ga - Что такое контент?</title>
+		<meta name="Description" content="Webdesigner.ga ~  Контентом — называется информационное содержание сайта, которыми могут быть как текстовые и графические записи...">
+		<meta name="Keywords" content="webdesigner, контент, вебдизайнер, html,css.что такое контент">
 		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,7 +29,7 @@
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
-<h1>Контент.</h1>
+<h1>Что такое контент?</h1>
 <p>Контентом — называется информационное содержание сайта, которыми могут быть как текстовые и графические записи, так и медиа (видео и аудио).</p><br>
 	<p>Язык Html  позволяет разместить контент, а CSS  оформить уникальный внешний вид, который будет отличатся от заданного по умолчанию языком HTML. </p><br><p>Наиболее интересен уникальный контент, однако в связи с распостранением сети интернет по миру, уникального контента становится всё меньше и меньше. 
 	В результате чего, в интернете довольно распостранены сайты, которые скопировали контент с другого сайта, в этом случае установлены негласные правила хорошего тона, когда скопированный текст должен ссылатся на первоисточник.Данная система похожа на ту, что используется в курсовых и дипломных работах, которые в последнее время частенько пишутся на заказ другими.</p>
