--- a/tipografika.html
+++ b/tipografika.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
 	<head>
-		<title>Webdesigner.ga - Вебдизайн в сети</title>
+		<title>Webdesigner.ga - Что такое типографика?</title>
 		<meta name="description" content="Webdesigner.ga ~  Типографика — это разнообразное начертание шрифтов, используещееся при оформлении текстовой информации в таких изданиях как газеты, журналы..">
-		<meta name="keywords" content="webdesigner, типографика, вебдизайн, html,css.">
+		<meta name="keywords" content="webdesigner, типографика, вебдизайн, html,css, что такое типографика">
 		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,9 +29,9 @@
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
-<h1>Типографика.</h1>
+<h1>Что такое типографика?</h1>
 <p>Типографика — это разнообразное начертание шрифтов, используещееся при оформлении текстовой информации в таких изданиях как газеты, журналы, книги брошюры и т.п., в том числе и в веб среде.</p><br>
-	<p>К примеру контент делится как минимум на две части, на заглавие (заголовок) и информационную часть, содержащую основной контент, насыщенный подробностями, где тема заглавия более широко раскрыта.</p><br>
+	<p>К примеру контент делится как минимум на две части, на заглавие (заголовок) и информационную часть, содержащую основной контент, насыщенный подробностями, где тема заглавия более широко раскрыта, при оформлении текста может использоватся разный шрифт.</p><br>
 	<p> Шрифты делятся в общем на три вида: С засечками, Рубленые без засечек, и Декоративные (к примеру стилизированные под буквы "восточных" или азиатских стран). Проще говоря первые две категории относятся к классическим, которые и используются в большинстве случаев, при этом они очень похожи друг на друга, особенно при небольшом размере шрифта.</p>
 	
 </article>
