--- a/tipografika.html
+++ b/tipografika.html
@@ -2,8 +2,8 @@
 <html lang="ru" charset="utf8">
 	<head>
 		<title>Webdesigner.ga - Что такое типографика?</title>
-		<meta name="description" content="Webdesigner.ga ~  Типографика — это разнообразное начертание шрифтов, используещееся при оформлении текстовой информации в таких изданиях как газеты, журналы..">
-		<meta name="keywords" content="webdesigner, типографика, вебдизайн, html,css, что такое типографика">
+		<meta name="Description" content="Webdesigner.ga ~  Типографика — это разнообразное начертание шрифтов, используещееся при оформлении текстовой информации в таких изданиях как газеты, журналы..">
+		<meta name="Keywords" content="webdesigner, типографика, вебдизайн, html,css, что такое типографика">
 		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
