--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
-<h1>О вебдизайне, вебдизайнах, вебдизайнерах в сети интернет.</h1>
+<h1>• О вебдизайне, вебдизайнах, вебдизайнерах в сети интернет.</h1>
 <p>Вебдизайн существует давно, чуть ли не с сотворения <a href="https://dic.academic.ru/dic.nsf/es/23309/%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%BD%D0%B5%D1%82" rel="nofollow" title="Почитать о сети интернет"> интернет сети</a>. Но в те далёкие времена ещё не существовало понятия вебдизайнер, и дизайны сайтов отличались простотой и незамысловатостью, основными элементами были контент и ссылки, впрочем ничего не изменилось и сейчас, за исключением того, что внешнему виду сайта сейчас уделяется куда больше внимания и времени. Индивидуальный неповторимый хоть уже и не на 100% дизайн сайта, это и есть работа вебдизайнера.</p>
 
 
