--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>В этом направлении веб разработок креатив часто носит главенствующую позицию, частенько некоторые решения перетекают в тренд и не имеют уже того изначального эффекта.Поэтому дизайнер работает над новым решением, которое не так распостранено в массах.</p>
 </article>
 <footer class="nebo">
-	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://webdesigner.ga"> Yaromin.ga</a></p>
+	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://yaromin.ga"> Yaromin.ga</a></p>
 </footer>
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
