--- a/tipografika.html
+++ b/tipografika.html
@@ -36,7 +36,7 @@
 	
 </article>
 <footer class="nebo">
-	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://webdesigner.ga"> Yaromin.ga</a></p>
+	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://yaromin.ga"> Yaromin.ga</a></p>
 </footer>
 </body>
 </table>
