--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 <p>Оформление контента на сайте в сети интернет может быть как классическим так и эксперементальным, как минималистическим, так и с максимальным использованием всевозможных спецэффектов CSS, анимациями SVG и интерактивными элементами JS.</p>
 <h2>Cтили вебдизайна в сети интернет.</h2>
-<p>Вообще такого понятия никогда небыло, но в последнее время начало появляться, поэтому я решил выделить основные:
+<p>Вообще такого понятия никогда небыло, но в последнее время начало появляться, поэтому я решил выделить основные:</p>
 
 <h3>Минималистический дизайн.</h3>
-Основным является текстовый контент, изображениям уделяется мало внимания, и используются они для создания акцентов в дизайне. Примером может послужить RRS канал.
+<p>Основным является текстовый контент, изображениям уделяется мало внимания, и используются они для создания акцентов в дизайне. Примером может послужить RRS канал или вот <a href="https://webdesigner.ga/pages/rechicapivo.html">эти страницы</a>.</p>
 
 <h3>Классический дизайн.</h3>
-Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов.
+<p>Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов.</p>
 
 <h3>Арт дизайн.</h3>
 Наиболее яркие и эмоциональные дизайны, дизайнеры эксперементируют и стараются добится эффекта "Вау!" Часто используются в рекламных компаниях.</p>
