--- a/pages/rechicapivo.html
+++ b/pages/rechicapivo.html
@@ -1,9 +1,9 @@
 <Doctype! html>
-<html>
+<html lang="ru" charset="utf8">
 <head>
-	<title>???????? ????</title>
-	<meta name="description" content="??????????? ???? ?????? ???????? ? 1975 ????.">
-		<meta name="keywords" content="??????, ??????, ??????, ???????????, ??????? ???? ???????????.">
+	<title>Днепровское пиво</title>
+	<meta name="description" content="Днепровское пиво эталон с 1975 года.">
+		<meta name="keywords" content="Речицкое пиво, Днепровское пиво, Гомель, Речица, Мозырь,Рогачёв, Светлогорск.">
 		<meta name="Yaromin P.A." content="https://webdesigner.ga">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>button{  background-image: linear-gradient(to right, orange , yellow);color:black; width:80px; height:50px; font-size:20px;} h2{font-size:50px;} body{background: black; color:white;}
@@ -12,14 +12,14 @@
 <center>
 <body>
 <header>
-	<img src="probka.png" width="180px">
+	<img src="img/probka.png" width="180px">
 </header>
 <article>
-<h2>??? 18 ?</h2>
+<h2>Вам уже 18 ?</h2>
  <button tupe="button" href=landing.html>??</button> <button type="button" href="landing.html"> ???</button>
 </article>
 <article>
-	<h3>??????????? ???????????? ???? ?????? ?????? ????????!</h3>
+	<h3>Черезмерное употребления пива может быть вредно для вашего здоровья!</h3>
 </article>
 </body>
 </center>
