--- a/pages/rechicapivo.html
+++ b/pages/rechicapivo.html
@@ -16,7 +16,7 @@
 </header>
 <article>
 <h2>Вам уже 18 ?</h2>
- <button tupe="button" href=landing.html>??</button> <button type="button" href="landing.html"> ???</button>
+ <button tupe="button" href=landing.html>Да</button> <button type="button" href="net.html">Нет</button>
 </article>
 <article>
 	<h3>Черезмерное употребления пива может быть вредно для вашего здоровья!</h3>
