--- a/pages/rechicapivo.html
+++ b/pages/rechicapivo.html
@@ -17,7 +17,7 @@
 <article>
 <h2>Вам уже 18 ?</h2>
  <button tupe="button" href=landing.html>Да</button> <button type="button" href="net.html">Нет</button>
-</article>
+</article><br>
 <article>
 	<h3>Черезмерное употребления пива может быть вредно для вашего здоровья!</h3>
 </article>
