--- a/pages/net.html
+++ b/pages/net.html
@@ -12,7 +12,7 @@
 <center>
 <body>
 <header>
-	<img src="probka.png" width="180px">
+	<img src="img/probka.png" width="180px">
 </header>
 <article>
 <h2>Так вам ещё не исполнилось 18 лет?</h2>
