--- a/pages/rechicapivo.html
+++ b/pages/rechicapivo.html
@@ -19,7 +19,7 @@
  <button tupe="button" href=landing.html>Да</button> <button type="button" href="net.html">Нет</button>
 </article><br><br>
 <article>
-	<h3>Черезмерное употребления пива может быть вредно для вашего здоровья!</h3>
+	<h3>Черезмерное употребление пива может быть вредно для вашего здоровья!</h3>
 </article>
 </body>
 </center>
