--- a/pages/rechicapivo.html
+++ b/pages/rechicapivo.html
@@ -16,7 +16,7 @@
 </header>
 <article>
 <h2>Вам уже 18 ?</h2>
- <button tupe="button" href=landing.html>Да</button> <button type="button" href="net.html">Нет</button>
+ <button onclick="javascript:window.location='https://webdesigner.ga/pages/landing.htm'>Да</button> <button onclick="javascript:window.location='net.html'>Нет</button>
 </article><br><br>
 <article>
 	<h3>Черезмерное употребление пива может быть вредно для вашего здоровья!</h3>
