--- a/pages/net.html
+++ b/pages/net.html
@@ -16,7 +16,7 @@
 </header>
 <article>
 <h2>Так вам ещё не исполнилось 18 лет?</h2>
-<p> В таком случае ожидаем вас на нашем сайте, как только вы дочтигните совершеннолетия!</p>
+<p> В таком случае ожидаем вас на нашем сайте, как только вы достигните совершеннолетия!</p>
 
 </article>
 <article>
