--- a/pages/rechicapivo.html
+++ b/pages/rechicapivo.html
@@ -16,7 +16,7 @@
 </header>
 <article>
 <h2>Вам уже 18 ?</h2>
- <а href="landing.html"><button href="https://webdesigner.ga/pages/landing.html">Да</button> </a> <a href="net.html"><button href="net.html">Нет</button></a>
+ <a href="landing.html"><button>Да</button> </a> <a href="net.html"><button href="net.html">Нет</button></a>
 </article><br><br>
 <article>
 	<h3>Черезмерное употребление пива может быть вредно для вашего здоровья!</h3>
