--- a/pages/landing.html
+++ b/pages/landing.html
@@ -17,7 +17,7 @@
 <p>Беспрецендентная акция от ОДО "Речицапиво".<br>
 <p>*Закажи ящик пива по акции на рождественские праздники, и получи в подарок фирменную открывашку!</p>
 <h2>Хотите ящик пива по акции?*</h2>
- <button tupe="button" href=landing.html>Да</button> <button type="button" href="net2.html">Нет</button>
+ <button tupe="button" href=landing.html>Да</button> <a href="net2.html><button>Нет</button></a>
 </article>
 <article>
 	<h3>Внимание! Черезмерное употребление алкогольных напитков вредит вашему здоровью!</h3>
