--- a/pages/landing.html
+++ b/pages/landing.html
@@ -7,7 +7,7 @@
 <center>
 <body>
 <header>
-	<a href="https://rechicapivo.by"><img src="img/probka.png" width="180px"></a>
+	<a href="https://ru.m.wikipedia.org/wiki/%D0%A0%D0%B5%D1%87%D0%B8%D1%86%D0%B0%D0%BF%D0%B8%D0%B2%D0%BE"><img src="img/probka.png" width="180px"></a>
 </header>
 <article>
 
