--- a/pages/rechicapivo.html
+++ b/pages/rechicapivo.html
@@ -12,7 +12,7 @@
 <center>
 <body>
 <header>
-	<а href="http://www.rechitsapivo.by/">  img src="img/probka.png" width="180px"></a>
+	<а href="http://www.rechitsapivo.by/">  <img src="img/probka.png" width="180px"></a>
 </header>
 <article>
 <h2>Вам уже 18 ?</h2>
