--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <p>Основным является текстовый контент, изображениям уделяется мало внимания, и используются они для создания акцентов в дизайне. Примером может послужить RRS канал или вот <a href="https://webdesigner.ga/pages/rechicapivo.html">эти страницы</a>.</p>
 
 <h3>Классический дизайн.</h3>
-<p>Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов.</p>
+<p>Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов. Пример корпаративной страницы.</p>
 
 <h3>Арт дизайн.</h3>
 Наиболее яркие и эмоциональные дизайны, дизайнеры эксперементируют и стараются добится эффекта "Вау!" Часто используются в рекламных компаниях.</p>
-<p>В этом направлении веб разработок креатив часто носит главенствующую позицию, частенько некоторые решения перетекают в тренд и не имеют уже того изначального эффекта.Поэтому дизайнер работает над новым решением, которое не так распостранено в массах.</p>
+<p>В этом направлении веб разработок креатив часто носит главенствующую позицию, частенько некоторые решения перетекают в тренд и не имеют уже того изначального эффекта.Поэтому дизайнер работает над новым решением, которое не так распостранено в массах. Пример страницы.</p>
 </article>
 <footer class="nebo">
 	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://yaromin.ga"> Yaromin.ga</a></p>
