--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	#dura_na_hui_ussr{color:#FFFFFF; max-width: 600px; padding: 100px 20px 20px 20px;position:relative; margin: -470px 0  0 220px; font-size:20px;} 
 	.nebo{padding:25px; color:#ffffff;}
 	.link{color:#FFFFFF} a{color:#FF6E9C;}
+	span{opacity:0.01;}
+	
 	
 </style>
 </head>
@@ -23,10 +25,13 @@
 <nav class="logomenu" >
 <a href="https://webdesigner.ga"><img src="logotype.png" alt="Webdesigner.ga"></a>
 <center>
-	<ul><li class="link"><a href="https://webdesigner.ga/index.html" rel="index">Главная</a></li>
-	<li><a href="https://webdesigner.ga/webdesigne.html" rel="index">Вебдизайн</a></li>
-	<li><a href="https://webdesigner.ga/kontent.html" rel="index">Контент</a></li>
-	<li><a href="https://webdesigner.ga/tipografika.html" rel="index">Типографика</a></li></ul>
+	<ul><li class="link"><a href="index.html" rel="index">Главная</a></li>
+	<li><a href="webdesigne.html" rel="index">Вебдизайн</a></li>
+	<li><a href="kontent.html" rel="index">Контент</a></li>
+	<li><a href="tipografika.html" rel="index">Типографика</a></li></ul>
+	<span><a href=page/gomel-gitara-urok.html></span>
+	
+	
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
