--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<li><a href="webdesigne.html" rel="index">Вебдизайн</a></li>
 	<li><a href="kontent.html" rel="index">Контент</a></li>
 	<li><a href="tipografika.html" rel="index">Типографика</a></li></ul>
-	<span><a href="page/gomel-gitara-urok.html"></span>
+	<a href="page/gomel-gitara-urok.html">
 	
 	
 </center>
