--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	#dura_na_hui_ussr{color:#FFFFFF; max-width: 600px; padding: 100px 20px 20px 20px;position:relative; margin: -470px 0  0 220px; font-size:20px;} 
 	.nebo{padding:25px; color:#ffffff;}
 	.link{color:#FFFFFF} a{color:#FF6E9C;}
-	span{opacity:0.01;}
+	
 	
 	
 </style>
@@ -28,8 +28,9 @@
 	<ul><li class="link"><a href="index.html" rel="index">Главная</a></li>
 	<li><a href="webdesigne.html" rel="index">Вебдизайн</a></li>
 	<li><a href="kontent.html" rel="index">Контент</a></li>
-	<li><a href="tipografika.html" rel="index">Типографика</a></li></ul>
-	<a href="pages/gomel-gitara-urok.html">
+	<li><a href="tipografika.html" rel="index">Типографика</a></li>
+		<li><a href="pages/gomel-gitara-urok.html"></li></ul>
+	
 	
 	
 </center>
