--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	span{display: block;}
 	.logomenu ul li a{ padding: 10px 0px 0px 0px;font-size:20px; display:block; color:#FFFE00; }
 	center {margin:0px;  padding:0 200px 0 0}
-	#dura_na_hui_ussr{color:#FFFFFF; max-width: 600px; padding: 100px 20px 20px 20px;position:relative; margin: -470px 0  0 220px; font-size:20px;} 
+	#web{color:#FFFFFF; max-width: 600px; padding: 100px 20px 20px 20px;position:relative; margin: -470px 0  0 220px; font-size:20px;} 
 	.nebo{padding:25px; color:#ffffff;}
 	.link{color:#FFFFFF} a{color:#FF6E9C;}
 	
@@ -29,13 +29,13 @@
 	<li><a href="webdesigne.html" rel="index">Вебдизайн</a></li>
 	<li><a href="kontent.html" rel="index">Контент</a></li>
 	<li><a href="tipografika.html" rel="index">Типографика</a></li>
-		<li><a href="pages/gomel-gitara-urok.html"></li></ul>
+		<li><a href="pages/uroki-gitary-gomel.html"></li></ul>
 	
 	
 	
 </center>
 </nav>
-<article id="dura_na_hui_ussr">
+<article id="web">
 <h1>• О вебдизайне, вебдизайнах, вебдизайнерах в сети интернет.</h1>
 <p>Вебдизайн существует давно, чуть ли не с сотворения <a href="https://dic.academic.ru/dic.nsf/es/23309/%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%BD%D0%B5%D1%82" rel="nofollow" title="Почитать о сети интернет"> интернет сети</a>. Но в те далёкие времена ещё не существовало понятия вебдизайнер, и дизайны сайтов отличались простотой и незамысловатостью, основными элементами были контент и ссылки, впрочем ничего не изменилось и сейчас, за исключением того, что внешнему виду сайта сейчас уделяется куда больше внимания и времени. Индивидуальный неповторимый хоть уже и не на 100% дизайн сайта, это и есть работа вебдизайнера.</p>
 
@@ -57,22 +57,7 @@
 <footer class="nebo">
 	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://yaromin.ga"> Yaromin.ga</a></p>
 </footer>
-	<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(55768960, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true,
-        ecommerce:"dataLayer"
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/55768960" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+	
 </body>
 </table>
 </html>
