--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
 	<ul><li class="link"><a href="index.html" rel="index">Главная</a></li>
 	<li><a href="webdesigne.html" rel="index">Вебдизайн</a></li>
 	<li><a href="kontent.html" rel="index">Контент</a></li>
-	<li><a href="tipografika.html" rel="index">Типографика</a></li></ul>
-		
-	
-	
-	
+	<li><a href="tipografika.html" rel="index">Типографика</a></li>
+		<li><a href="pages/uroki-gitary-gomel.html" rel="index">Уроки гитары</a></li>
+	</ul>
 </center>
 </nav>
 <article id="web">
