--- a/pages/uroki-gitary-gomel.html
+++ b/pages/uroki-gitary-gomel.html
@@ -16,7 +16,7 @@
 	<img src="guitar.png" width ="600px" image-border-radius=6px>
 </header>
 <article>
-<h1>• Начальные уроки игры на акустической гитаре для детей 13 - 15 лет. <br>Без нотной грамоты. В Гомеле.</h1>
+<h1>• Начальные уроки игры на акустической гитаре для детей 13 - 15 лет. <br>Без нотной грамоты.<br> В Гомеле.</h1>
 <fieldset>
  <p> Дам индивидуальные уроки игры на акустической гитаре вашим детям возраста 13 - 15 лет <b>в городе Гомеле</b> у вас на дому.  <br>Начальная школа - игра боем, игра перебором.</p> </fieldset><br>
  <audio src="gomel-gitara-urok.mp3" controls></audio>
