--- a/webdesigne.html
+++ b/webdesigne.html
@@ -30,7 +30,7 @@
 </nav>
 <article id="dura_na_hui_ussr">
 <h1>• О вебдизайне, или что такое вебдизайн.</h1>
-<p>Вебдизайн — это визуальное оформление контента интернет страницы размещённой в сети интернет средствами языков HTML  и  CSS, который можно разделить на создание макета с помощью графических программ и вёрстку с помощью текстового редактора, хотя и не обязательно.</p><br>
+<p>Вебдизайн — это визуальное оформление контента интернет страницы размещённой в сети интернет средствами языков HTML  и  CSS, который можно разделить на создание макета с помощью графических программ и вёрстку с помощью текстового редактора, хотя и не обязательно. Кроме того при оформлении интернет страниц использутся изображения использующие различные форматы ( наиболее популярными стали.jpg .png и анимированное изображение расширения .gif)  В последнее время начал использоватся формат .webp.</p><br>
 	<p><a href="/pages/0.html"> Язык Html</a>   на протяжении многих лет подвергался модефикациям, в результате чего имеет несколько версий, на данный период времени актуальны Html4  и Html5 (последний вроде как ещё недоработан, но его уже многие используют). Тоже самое касается и <a href="/pages/0css.html">CSS</a>, последней версией которого является 3-я.</p>
 	
 </article>
