--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<li><a href="webdesigne.html" rel="index">Вебдизайн</a></li>
 	<li><a href="kontent.html" rel="index">Контент</a></li>
 	<li><a href="tipografika.html" rel="index">Типографика</a></li>
-		<li><a href="pages/uroki-gitary-gomel.html" rel="index"><img src="pages/img/Uroki-gitary-gomel.jpg" alt="Уроки игры на гитаре в Гомеле"></a></li>
+		<li><a href="pages/uroki-gitary-gomel.html" rel="index"><img src="pages/img/Uroki-gitary-gomel.jpg" alt="Уроки игры на гитаре в Гомеле" width="160px"></a></li>
 	</ul>
 </center>
 </nav>
