--- a/tipografika.html
+++ b/tipografika.html
@@ -24,7 +24,8 @@
 <center>
 	<ul><li><a href="https://webdesigner.ga/index.html">Главная</a></li>
 	<li><a href="https://webdesigner.ga/webdesigne.html">Вебдизайн</a></li>
-	<li><a href="https://webdesigner.ga/kontent.html">Контент</a></li>
+	<li><a href="https://webdesigner.ga/kontent.html">Контент</a></li><li a href="tipografika.html">Типографика</li>
+		
 	<li><a href="pages/uroki-gitary-gomel.html" rel="index"><img src="pages/img/Uroki-gitary-gomel.jpg" alt="Уроки игры на гитаре в Гомеле" width="160px"></a></li></ul>
 </center>
 </nav>
