--- a/webdesigne.html
+++ b/webdesigne.html
@@ -25,7 +25,8 @@
 	<ul><li><a href="https://webdesigner.ga/index.html">Главная</a></li>
 	<li class="link"><a href="https://webdesigner.ga/webdesigne.html">Вебдизайн</a></li>
 	<li><a href="https://webdesigner.ga/kontent.html">Контент</a></li>
-	<li><a href="https://webdesigner.ga/tipografika.html">Типографика</a></li></ul>
+	<li><a href="https://webdesigner.ga/tipografika.html">Типографика</a></li>
+	<li><a href="https://webdesigner.ga/sounddesigner.html">Аудиодизайн</a></li></ul>
 </center>
 </nav>
 <article id="dura_na_hui_ussr">
