--- a/tipografika.html
+++ b/tipografika.html
@@ -25,7 +25,8 @@
 	<ul><li><a href="https://webdesigner.ga/index.html">Главная</a></li>
 	<li><a href="https://webdesigner.ga/webdesigne.html">Вебдизайн</a></li>
 	<li><a href="https://webdesigner.ga/kontent.html">Контент</a></li>
-		<li class="link"><a href="https://webdesigner.ga/tipografika.html">Типографика</a></li>
+		<li class="link"><a href="https://webdesigner.ga/tipografika.html">Типографика</a>
+		<li><a href="https://webdesigner.ga/sounddesigner.html">Аудиодизайн</a></li></li>
 		
 	<li><a href="pages/uroki-gitary-gomel.html" rel="index"><img src="pages/img/Uroki-gitary-gomel.jpg" alt="Уроки игры на гитаре в Гомеле" width="160px"></a></li></ul>
 </center>
