--- a/sounddesigner.html
+++ b/sounddesigner.html
@@ -38,7 +38,7 @@
 	<p> Для организации отдельных звуков и спецэффектов были придуманны первые электронные семплеры, наиболее известными из которох стали изделия производителей Rolond, Akai, Yamaha и Alesis,  позволявшие назначить ранее записанные звуки отдельным клавишам, к которым звукорежиссер имел прямой доступ и мог в режиме реального времени производить коррекцию звука при помощи изменения его параметров, в том числе и с помщью спецэффектов. До них процесс звукозаписи и редактирования был более сложным и был похож на работу специалиста по монтажу, так как работать приходилось исключительно с магнитными плёнками и звукорежиссерским пультом, где специалисту зачастую приходилось искать нестандартные решения для создания спецэффекта и применять смекалку. </p>
 	<p>Синонимы: Дизайнер по звуку, Аудиодизайнер, Художник по звуку, Звуковой дизайнер, Звукорежиссёр, Диджей.<p>
 		<br>
-	<a href="https://webdesigner.ga/pages/zvuki.html> Послушать некоторые записи звуков из повседневной жизни.</а>
+	<a href="/pages/audiozapici.html> Послушать некоторые записи звуков из повседневной жизни.</а>
 	
 </article>
 <footer class="nebo">
