--- a/pages/audiozapici.html
+++ b/pages/audiozapici.html
@@ -94,7 +94,49 @@
             <code>audio</code> element.
     </audio>
 </figure>
-
+	
+<figure>
+	    <figcaption>Запись звука разных частей пылесоса, извлекаемого пластмассовой палочкой :</figcaption>
+    <audio   controls   src="audio/choto1.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
+<figure>
+	    <figcaption>Запись звука разных частей пылесоса, извлекаемого пластмассовой палочкой :</figcaption>
+    <audio   controls   src="audio/choto2.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
+<figure>
+	    <figcaption>Запись звука разных частей пылесоса, извлекаемого пластмассовой палочкой :</figcaption>
+    <audio   controls   src="audio/choto3.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
+<figure>
+	    <figcaption>Запись звука разных частей пылесоса, извлекаемого пластмассовой палочкой :</figcaption>
+    <audio   controls   src="audio/choto4.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
+<figure>
+	    <figcaption>Запись звука разных частей пылесоса, извлекаемого пластмассовой палочкой :</figcaption>
+    <audio   controls   src="audio/choto5.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
+<figure>
+	    <figcaption>Запись звука разных частей пылесоса, извлекаемого пластмассовой палочкой :</figcaption>
+    <audio   controls   src="audio/choto6.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
 	<p>Синонимы: Дизайнер по звуку, Аудиодизайнер, Художник по звуку, Звуковой дизайнер, Звукорежиссёр, Диджей, "Звукарь".<p>
 		<br>
 	<a href="https://webdesigner.ga/pages/zvuki.html>Некоторые записи звуков из повседневной жизни</а>
