--- a/pages/audiozapici.html
+++ b/pages/audiozapici.html
@@ -97,7 +97,7 @@
 	
 <figure>
 	    <figcaption>Запись звука разных частей пылесоса, извлекаемого пластмассовой палочкой :</figcaption>
-    <audio   controls   src="audio/choto1.mp3">
+    <audio   controls   src="audio/choto.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio>
