--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>Основным является текстовый контент, изображениям уделяется мало внимания, и используются они для создания акцентов в дизайне. Примером может послужить RRS канал или вот <a href="https://webdesigner.ga/pages/rechicapivo.html">эти страницы</a>.</p>
 
 <h3>Классический дизайн.</h3>
-<p>Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов. Пример корпаративной страницы.</p>
+<p>Классический дизайн встречается наиболее часто в интернете, в основе лежат корпаротивные сайты, строгий стиль, не используются как правило яркие цвета, классический набор шрифтов. Пример <a href="https://webdesigner.ga/pages/designersale.html">корпаративной страницы.</a></p>
 
 <h3>Арт дизайн.</h3>
 Наиболее яркие и эмоциональные дизайны, дизайнеры эксперементируют и стараются добится эффекта "Вау!" Часто используются в рекламных компаниях.</p>
