--- a/pages/designersale.html
+++ b/pages/designersale.html
@@ -8,14 +8,14 @@
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
-	#zero{margin:0px; padding:0px; width:100%; display:block; background-color:#ffffff; font: #0C1503;}
+	#zero{margin:0px; padding:0px; width:100%; display:block; background-color:#ffffff;}
 	.logomenu{background-image:url(bg.png); width:200px; height:100%; padding:5px;}
 	span{display: block;}
 	.logomenu center ul li a{ padding: 10px 0px 0px 0px;font-size:23px; display:block; color:#FF002B; }
 	center {margin:0px;  padding:0 200px 0 0}
-	.soderganie{color:#FFFFFF; min-width: 320px; padding: 28px;position:relative; margin: -140px 0  0 220px; font-size:20px;font:#000000;} 
+	.soderganie{min-width: 320px; padding: 28px;position:relative; margin: -140px 0  0 220px; font-size:20px;font:#000000;} 
 	.nebo{padding:25px; color:#ffffff;}
-	.link{color:#FFFFFF; } #idilink{color:#000000;}
+	.link{color:#FF002B; } #idilink{color:#000000;}
 	h1{font-size:43px;}
 </style>
 </head>
