--- a/pages/audiozapici.html
+++ b/pages/audiozapici.html
@@ -117,7 +117,12 @@
     </audio>
 </figure>
 
-
+    <figcaption>Моё мнение по поводу баллоболов в радиоэфире, которые мечтают стать новыми богами и образовать новую секту "Рабы Зари"</figcaption>
+    <audio   controls   src="audio/choto5.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
 
 	<p>Синонимы: Дизайнер по звуку, Аудиодизайнер, Художник по звуку, Звуковой дизайнер, Звукорежиссёр, Диджей, "Звукарь".<p>
 		<br>
