--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <h3>Арт дизайн.</h3>
 Наиболее яркие и эмоциональные дизайны, дизайнеры эксперементируют и стараются добится эффекта "Вау!" Часто используются в рекламных компаниях.</p>
-<p>В этом направлении веб разработок креатив часто носит главенствующую позицию, частенько некоторые решения перетекают в тренд и не имеют уже того изначального эффекта.Поэтому дизайнер работает над новым решением, которое не так распостранено в массах. Пример страницы.</p>
+<p>В этом направлении веб разработок креатив часто носит главенствующую позицию, частенько некоторые решения перетекают в тренд и не имеют уже того изначального эффекта.Поэтому дизайнер работает над новым решением, которое не так распостранено в массах. <a href="https://webdesigner.ga/pages/artcarpushka.html">Пример страницы.</a></p>
 </article>
 <footer class="nebo">
 	<p align="center"> Все права защищены 2012-2019 <a href="https://yomayo.ga">Yomayo.ga</a><a href="https://webdesigner.ga"> Webdesigner.ga</a><a href="https://yaromin.ga"> Yaromin.ga</a></p>
