--- a/pages/artcarpushka.html
+++ b/pages/artcarpushka.html
@@ -8,9 +8,9 @@
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
-	#zero{margin:0px; padding:0px; width:100%;  background-color:#ffffff;background-image:url(img/bg5.png) width:100px;}
-	.logomenu{background-image:url(img/bg5.png) width:100px; padding:5px;}
-	center {margin:0px;  padding:0 200px 0 0}
+	#zero{margin:0px; padding:0px; width:100%;  background-color:#ffffff;background:url(img/bg5.png) width:100px;}
+	
+	
 	.soderganie{min-width: 320px; padding: 28px;position:relative; margin: -0px 0  0 220px; font-size:20px;font:#000000;} 
 	.nebo{padding:25px;}
 	.link{color:#FFFFFF; } #idilink{color:#000000;}
