--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Webdesigner.ga - Вебдизайн в сети интернет</title>
 		<meta name="Description" content="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
-		<meta name="Keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css. сеть интернет, www, стили вебдизайна, стили веб дизайна, вебдизайн в сети интернет.">
+		<meta name="Keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css, сеть интернет, www, стили вебдизайна, стили веб дизайна, вебдизайн в сети интернет.">
 		<meta name="Yaromin P.A." content="http://webdesigner.ga">
 		<meta name="yandex-verification" content="248ff1f6791ed225" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
