--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru" charset="utf8">
-	<head>
+	<head> 
+		<script data-ad-client="ca-pub-6551205419154138" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<title>Webdesigner.ga - Вебдизайн в сети интернет</title>
 		<meta name="Description" content="Webdesigner.ga ~ вебдизайн существует давно, чуть ли не с сотворения интернет сети, в те далёкие времена вебдизайнеры... ">
 		<meta name="Keywords" content="Webdesigner.ga, вебдизайн, вебдизайнер, html,css, сеть интернет, www, стили вебдизайна, стили веб дизайна, вебдизайн в сети интернет.">
